python-evdev (1.1.2+dfsg-1) UNRELEASED; urgency=medium

  * New upstream release.
  * Enable tests, skipping those requiring root. Closes: #908988.

 -- Stephen Kitt <skitt@debian.org>  Mon, 17 Sep 2018 09:58:29 +0200

python-evdev (1.0.0+dfsg-1) unstable; urgency=medium

  * New upstream release.
  * Drop X-Python-Version, the minimum versions are satisfied
    everywhere.
  * Switch to debhelper compatibility level 11.
  * Standards-Version 4.1.4, no further change required.

 -- Stephen Kitt <skitt@debian.org>  Sat, 02 Jun 2018 17:38:07 +0200

python-evdev (0.8.1+dfsg-1) unstable; urgency=medium

  * New upstream release.
  * Don't run sphinx during arch-only builds. Thanks to Helmut Grohne for
    the initial patch! Closes: #895108.
  * Install the examples.
  * Standards-Version 4.1.3, no change required.
  * Migrate to Salsa.

 -- Stephen Kitt <skitt@debian.org>  Sat, 07 Apr 2018 15:27:19 +0200

python-evdev (0.7.0+dfsg-2) unstable; urgency=medium

  * Limit the architecture to linux-any. Closes: #875624.
  * Switch to Python 3 Docutils and Sphinx, build-conflicting on
    python-sphinx to avoid issues with that being picked in preference to
    python3-sphinx.
  * Clean up debian/control with cme.
  * Drop the new-package-should-not-package-python2-module override
    since this is no longer a new package.
  * Standards-Version 4.1.1, no change required.

 -- Stephen Kitt <skitt@debian.org>  Sat, 07 Oct 2017 11:49:45 +0200

python-evdev (0.7.0+dfsg-1) unstable; urgency=medium

  * Initial release. Closes: #709988.

 -- Stephen Kitt <skitt@debian.org>  Fri, 01 Sep 2017 13:56:02 +0200