@@ -2,6 +2,9 @@ python-evdev (1.1.2+dfsg-1) UNRELEASED; urgency=medium
 
   * New upstream release.
   * Enable tests, skipping those requiring root. Closes: #908988.
+  * Ensure that the module is available when the documentation is built,
+    so that the API documentation can be included. As a result, the
+    documentation is now architecture-dependent. Closes: #908990.
 
  -- Stephen Kitt <skitt@debian.org>  Mon, 17 Sep 2018 09:58:29 +0200
 
